# velib_airflow_orchestration_elt_ml

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.override.yml  front_spec_sheet.md  init.sql  init_guide.md  project_dev_goals.md  pyproject.toml  requirements.txt  servers.json
.ansible/: setup_velib_astronomer.yml
dags/: start_velib.py
dags/ingestion/: in_get_hourly_weather.py  in_get_weather_history.py  in_velib_locations.py  in_velib_stations.py  seed_stations_table.py
dags/load/: archive_days_from_file.py  archive_past_day.py  archive_past_days.py  list_archive_files.py  lo_archive_daily_files_from_backup_file.py  lo_archive_past_days.py  lo_make_daily_stations_backup.py  lo_make_locations_backup.py  lo_merge_all_parquet_files.py  lo_update_index_file.py  make_daily_stations_backup.py  make_locations_backup.py  make_stations_backup.py  make_unified_archive.py  merge_all_parquet_files.py  merge_archived_data.py  saves.md  seed_original_stations_table.py  unified_data copy.py  unified_data.py
dags/report/: rep_run_streamlit_app.py  run_streamlit_app copy.py
dags/transform/: tr_create_global_numbikesavailable_analytics.py  tr_create_global_numbikesavailable_analytics_v2.py
data/: 2024-06-02.parquet  2024-07-23.parquet  scratchpad.ipynb  scratchpad_geo.ipynb  scratchpad_ml_global.ipynb  scratchpad_viz_global.ipynb  scratchpad_weather.ipynb  unified_data_sample.csv
include/: meterology_utils.py
include/custom_operators/: duckdb.py  minio.py
include/custom_task_groups/: velib_daily_archive.py  (+3 more)
scripts/: csv_to_parquet.py
(+7 files in other folders)
