[tool.poetry]
name = "astronomer-codespaces-test"
version = "0.1.0"
description = ""
authors = ["MatthieuLeNozach <matthieu.le.nozach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
ipython = "^8.26.0"
pyarrow = "^17.0.0"
duckdb = "^1.0.0"
matplotlib = "^3.9.1"
geopy = "^2.4.1"
requests = "^2.32.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
